// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "compact-long" 1`] = `
Object {
  "compactDisplay": "long",
  "notation": "compact",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "compact-short" 1`] = `
Object {
  "compactDisplay": "short",
  "notation": "compact",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "currency/CAD ." 1`] = `
Object {
  "currency": "CAD",
  "maximumFractionDigits": 0,
  "style": "currency",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "currency/GBP .0+/@@@" 1`] = `
Object {
  "currency": "GBP",
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 1,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "currency/GBP .00##/@@@ unit-width-full-name" 1`] = `
Object {
  "currency": "GBP",
  "currencyDisplay": "name",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "currency",
  "unitDisplay": "long",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "currency/GBP .00##/@@@" 1`] = `
Object {
  "currency": "GBP",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "currency",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "engineering" 1`] = `
Object {
  "notation": "engineering",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "engineering/sign-except-zero" 1`] = `
Object {
  "notation": "engineering",
  "signDisplay": "exceptZero",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "measure-unit/length-meter .00##/@@@ unit-width-full-name" 1`] = `
Object {
  "currencyDisplay": "name",
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "unit",
  "unit": "meter",
  "unitDisplay": "long",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "measure-unit/length-meter .00##/@@@" 1`] = `
Object {
  "maximumFractionDigits": 4,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "unit",
  "unit": "meter",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "notation-simple" 1`] = `
Object {
  "notation": "standard",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "percent .00/@##" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 1,
  "style": "percent",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "percent .00/@@@" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "maximumSignificantDigits": 3,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 3,
  "style": "percent",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "percent .00/@@@@+" 1`] = `
Object {
  "maximumFractionDigits": 2,
  "minimumFractionDigits": 2,
  "minimumSignificantDigits": 4,
  "style": "percent",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "scientific" 1`] = `
Object {
  "notation": "scientific",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "scientific/+ee/sign-always" 1`] = `
Object {
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "scientific/sign-always" 1`] = `
Object {
  "notation": "scientific",
  "signDisplay": "always",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "sign-accounting" 1`] = `
Object {
  "currencySign": "accounting",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "sign-accounting-always" 1`] = `
Object {
  "currencySign": "accounting",
  "signDisplay": "always",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "sign-accounting-except-zero" 1`] = `
Object {
  "currencySign": "accounting",
  "signDisplay": "exceptZero",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "sign-always" 1`] = `
Object {
  "signDisplay": "always",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "sign-auto" 1`] = `
Object {
  "signDisplay": "auto",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "sign-except-zero" 1`] = `
Object {
  "signDisplay": "exceptZero",
}
`;

exports[`[convertNumberSkeletonToNumberFormatOptions] case: "sign-never" 1`] = `
Object {
  "signDisplay": "never",
}
`;

exports[`case: "@@#" 1`] = `
Array [
  Object {
    "style": Object {
      "tokens": Array [
        Object {
          "options": Array [],
          "stem": "@@#",
        },
      ],
      "type": 0,
    },
    "type": 2,
    "value": "0",
  },
]
`;

exports[`case: "@@#" 2`] = `"{0, number, ::@@#}"`;

exports[`case: "compact-short currency/GBP" 1`] = `
Array [
  Object {
    "style": Object {
      "tokens": Array [
        Object {
          "options": Array [],
          "stem": "compact-short",
        },
        Object {
          "options": Array [
            "GBP",
          ],
          "stem": "currency",
        },
      ],
      "type": 0,
    },
    "type": 2,
    "value": "0",
  },
]
`;

exports[`case: "compact-short currency/GBP" 2`] = `"{0, number, ::compact-short currency/GBP}"`;

exports[`case: "currency/CAD unit-width-narrow" 1`] = `
Array [
  Object {
    "style": Object {
      "tokens": Array [
        Object {
          "options": Array [
            "CAD",
          ],
          "stem": "currency",
        },
        Object {
          "options": Array [],
          "stem": "unit-width-narrow",
        },
      ],
      "type": 0,
    },
    "type": 2,
    "value": "0",
  },
]
`;

exports[`case: "currency/CAD unit-width-narrow" 2`] = `"{0, number, ::currency/CAD unit-width-narrow}"`;
